--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 ## MySQL dependency
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/flightdb
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/flightdb2
 spring.h2.console.enabled=true
 spring.datasource.username=root
-spring.datasource.password=seme@mysql
+spring.datasource.password=root
 spring.jpa.show-sql=true
 useSSL=false
