--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3306/flightdb2
 spring.h2.console.enabled=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=seme@mysql
 spring.jpa.show-sql=true
 useSSL=false
